tests/stacks/azure/application/add-anonymous-user-filter-istio-1-6/test_data/expected/networking.istio.io_v1alpha3_envoyfilter_add-user-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-user-filter
  namespace: istio-system
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
                request_handle:headers():add("kubeflow-userid","anonymous@kubeflow.org")
            end
  workloadSelector:
    labels:
      app: istio-ingressgateway
